<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/divider"
            tools:ignore="ContentDescription"
            tools:layout_height="100dp"/>

        <View
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            style="@style/HorizontalDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/name_label"
            style="@style/TextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hotel_info_name_label"/>

        <TextView
            android:id="@+id/name"
            style="@style/TextValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            style="@style/HorizontalDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/rating_label"
            style="@style/TextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hotel_info_rating_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_label"/>

        <RatingBar
            android:id="@+id/rating"
            style="@style/DefaultRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="4dp"/>

        <View
            style="@style/HorizontalDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/address_label"
            style="@style/TextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hotel_info_address_label"/>

        <TextView
            android:id="@+id/address"
            style="@style/TextValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            style="@style/HorizontalDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/distance_label"
            style="@style/TextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hotel_info_distance_label"/>

        <TextView
            android:id="@+id/distance"
            style="@style/TextValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            style="@style/HorizontalDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/available_suites_count_label"
            style="@style/TextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hotel_info_available_suites_count_label"/>

        <TextView
            android:id="@+id/available_suites_count"
            style="@style/TextValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            style="@style/HorizontalDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/available_suites_label"
            style="@style/TextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hotel_info_available_suites_label"/>

        <TextView
            android:id="@+id/available_suites"
            style="@style/TextValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            style="@style/HorizontalDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/coordinates_label"
            style="@style/TextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hotel_info_coordinates_label"/>

        <TextView
            android:id="@+id/coordinates"
            style="@style/TextValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</ScrollView>